--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,7 +52,17 @@ jobs:
         cd backend/
         python manage.py test
 
-  - name: Check out the repo
+  # .github/workflows/main.yml
+
+# Тут задачи тестирования и сборки образа
+# ...
+# Добавляем новую задачу: деплой приложения
+  build_and_push_to_docker_hub:
+    name: Push Docker image to DockerHub
+    runs-on: ubuntu-latest
+    needs: tests
+    steps:
+      - name: Check out the repo
         # Получение исходного кода из репозитория
         uses: actions/checkout@v3
       - name: Set up Docker Buildx
@@ -81,4 +91,4 @@ jobs:
           # Для каждого пересобранного образа 
           # устанавливаем тег latest, чтобы потом
           # на сервере и в docker-compose.yml не указывать версию
-          tags: kprima/taski_backend:latest 
+          tags: kprima/taski_backend:latest
